--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,7 @@ spring.config.import=configserver:http://localhost:8888
 
 spring.cloud.config.fail-fast=true
 
+spring.sql.init.mode=ALWAYS
+spring.sql.init.schema-locations=classpath:/db/oauth2-registered-client-schema.sql
+
 
